--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-#pixelCanvas {
-    min-height: 100vh
-    width: 100vw;
+.gridBoxes {
+    width: 25px;
+    height: 25px;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.grid-container{
+    display: flex;
+    flex-direction: row;
+    max-width: 300px;
+    flex-wrap: wrap;
 }
