--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
+* {
+    border-style: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+  }
+
+html {
+    height: 100%;
+    background-color: #EAEAEA;
+}
+
+.etch-a-sketch {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.heading-div{
+    margin-bottom: 150px;
+    font-size: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 .gridBoxes {
-    width: 5px;
-    height: 5px;
+    width: 10px;
+    height: 10px;
     border-style: solid;
     border-width: 1px;
 }
